syntax = "proto3";

option csharp_namespace = "MMV.Service.ProtoClass";

package MMV;

service MMVService {
  rpc GetMake (GrpcInt) returns (MakeResponse);
  
  rpc GetModel (GrpcInt) returns (ModelResponse);

  rpc GetVersionList (GrpcInt) returns (VersionListResponse);
  rpc GetDefaultVersionByModelId (GrpcInt) returns (VersionResponse);
}

//=========================Request-=============================
message GrpcInt
{
  int32 Value = 1;
}

//=========================Response-=============================

message MakeResponse {
  int32 id = 1;
  string name = 2;
}

message ModelResponse {
  int32 id = 1;
  int32 makeId = 2;
  string name = 3;
}

message VersionListResponse {
  repeated VersionResponse version = 1;
}

message VersionResponse {
  int32 id = 1;
  int32 modelId = 2;
  string name = 3;
}


